fixed userdoc tree view layout issues caused by outline mode.  added treeViewHideHeader to avoid hackiness of overlaoding treeVewHideTitle

--- a/src/client/views/collections/CollectionTreeView.scss
+++ b/src/client/views/collections/CollectionTreeView.scss
@@ -136,8 +136,8 @@
 .treeViewItem-header {
     border: transparent 1px solid;
     display: flex;
-    align-items: center;
-            ::-webkit-scrollbar {
+    //align-items: center;
+    ::-webkit-scrollbar {
             display: none;
     }
     .formattedTextBox-cont {
